--- a/ansible/roles/jenkins/templates/init.groovy.j2
+++ b/ansible/roles/jenkins/templates/init.groovy.j2
@@ -1,6 +1,9 @@
 #!groovy
+import hudson.model.*
 import hudson.security.*
+import hudson.slaves.*
 import jenkins.model.*
+import jenkins.security.s2m.AdminWhitelistRule;
 
 def instance = Jenkins.getInstance()
 
@@ -16,5 +19,16 @@ instance.save()
 
 instance.setNumExecutors(0) // no builds on master
 instance.setSlaveAgentPort([{{ jenkins_slave_agent_port }}])
+instance.getInjector().getInstance(AdminWhitelistRule.class).setMasterKillSwitch(false);
 
 instance.save()
+
+{% for host in groups.jenkins_slaves %}
+Jenkins.instance.addNode(
+new DumbSlave("{{ host.split('.')[0] }}", "", '/var/lib/jenkins', '4',
+              Node.Mode.NORMAL, '',
+              new JNLPLauncher(), new RetentionStrategy.Always(),
+              new ArrayList())
+)
+{% endfor %}
+
