--- a/ansible/roles/jenkins_slave/templates/jenkins.service.j2
+++ b/ansible/roles/jenkins_slave/templates/jenkins.service.j2
@@ -4,8 +4,8 @@ After=local-fs.target network.target
 
 [Service]
 Type=simple
-ExecStartPre=/usr/bin/wget {{ jenkins_url }}jnlpJars/slave.jar -O /var/lib/jenkins/slave.jar
-ExecStart=/usr/bin/java -Xms64m -Xmx256m -jar /var/lib/jenkins/slave.jar -jnlpUrl {{ jenkins_url }}computer/{{ inventory_hostname }}/slave-agent.jnlp -secret {{ secret }} -workDir /var/lib/jenkins
+ExecStartPre=/usr/bin/wget {{ jenkins_url }}jnlpJars/agent.jar -O /var/lib/jenkins/agent.jar
+ExecStart=/usr/bin/java -Xms64m -Xmx256m -jar /var/lib/jenkins/agent.jar -jnlpUrl {{ jenkins_url }}computer/{{ inventory_hostname }}/slave-agent.jnlp -secret {{ secret }} -workDir /var/lib/jenkins
 MemoryLimit=16G
 Restart=on-failure
 RestartSec=10
